Fixed the footer on mobile without breakpoints!

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -23,8 +23,8 @@
 #footer {
   display: -webkit-flex;
   display: flex;
-  -webkit-flex-flow: row nowrap;
-          flex-flow: row nowrap;
+  -webkit-flex-flow: row wrap;
+          flex-flow: row wrap;
   height: 100%;
   margin: auto;
   min-width: 700px;
