--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -198,7 +198,7 @@
     border-bottom: none;
     border-left: 1px solid rgba(#fff,0.3);
     border-right: 1px solid rgba(#fff,0.3);
-    border-radius: none;
+    border-radius: 0;
     color: #fff;
     transition: color 400ms ease, background-color 400ms ease, border 400ms ease;
     appearance: none;
